--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -24,6 +24,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            
+            <intent-filter>
+	            <action android:name="com.google.android.glass.action.VOICE_TRIGGER" />
+	        </intent-filter>
+	        <meta-data android:name="com.google.android.glass.VoiceTrigger"
+	                   android:resource="@xml/voice_trigger" />
         </activity>
     </application>
 
