--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="15" />
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera" />
+ 	<uses-feature android:name="android.hardware.camera.autofocus" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
 
